# orbity

./: .gitignore  README.md  pyproject.toml
config_examples/: fictional_full.yaml  fictional_overlay.yaml
orbity/: __init__.py
orbity/config/: __init__.py  loader.py  models.py
orbity/config/defaults/: solar_system.yaml
orbity/simulation/: acceleration.py  clock.py  propagator.py  universe.py
scripts/: benchmark.py  demo.py
tests/: test_universe.py
